examples/test/testpolicy2506.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2506
  namespace: namespace248
spec:
  podSelector:
    matchLabels:
      key42: value20
      key13: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value10
          key48: value40
      podSelector:
        matchLabels:
          key9: value43
          key42: value17
